# dytallix-node

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
blockchain-core/: Cargo.toml  SECRETS_README.md
blockchain-core/examples/: circuit_breaker_demo.rs  cli_integration_demo.rs  genesis_usage.rs  health_check_demo.rs  secrets_demo.rs
blockchain-core/src/: amounts.rs  config.rs  contracts.rs  genesis.rs  genesis_integration.rs  lib.rs  main.rs  main_backup.rs  staking.rs  state_commitment.rs  types.rs
blockchain-core/src/api/: QuantumRiskIndex.js  mod.rs
blockchain-core/src/consensus/: ai_integration.rs  ai_oracle_client.rs  audit_trail.rs  block_processing.rs  compliance_api.rs  consensus_engine.rs  enhanced_ai_integration.rs  high_risk_queue.rs  integration_tests.rs  key_management.rs  mod.rs  mod_backup.rs  mod_clean.rs  mod_new.rs  mod_old.rs  notification_system.rs  notification_types.rs  oracle_registry.rs  performance_optimizer.rs  performance_test.rs  replay_protection.rs  review_api.rs  risk_processing_tests.rs  signature_verification.rs  simple_risk_tests.rs  transaction_validation.rs  transaction_validation_tests.rs
blockchain-core/src/consensus/types/: ai_types.rs  config_types.rs  error_types.rs  mod.rs  oracle_types.rs
blockchain-core/src/crypto/: mod.rs
blockchain-core/src/networking/: mod.rs
blockchain-core/src/policy/: mod.rs  signature_policy.rs
blockchain-core/src/risk/: mod.rs
blockchain-core/src/risk/pulseguard/: mod.rs
blockchain-core/src/risk/pulseguard/alerts/: queue.rs
blockchain-core/src/risk/pulseguard/api/: OPENAPI.md  http.rs  mod.rs
blockchain-core/src/risk/pulseguard/bench/: latency.rs
blockchain-core/src/risk/pulseguard/engine/: mod.rs
blockchain-core/src/risk/pulseguard/explain/: attribution.rs  mod.rs  paths.rs
blockchain-core/src/risk/pulseguard/features/: mod.rs  structural.rs  temporal.rs
blockchain-core/src/risk/pulseguard/graph/: dag.rs
blockchain-core/src/risk/pulseguard/ingest/: finalized_tail.rs  mempool_tail.rs  mod.rs
blockchain-core/src/risk/pulseguard/models/: anomaly.rs  ensemble.rs  gbm.rs  mod.rs
blockchain-core/src/risk/pulseguard/ops/: config.toml  mod.rs
blockchain-core/src/risk/pulseguard/pqc/: manifest.rs  mod.rs  signer.rs
blockchain-core/src/risk/pulseguard/tests/: basic.rs
blockchain-core/src/risk/pulseguard/usecases/: flash_loan.rs  mod.rs
blockchain-core/src/runtime/: mod.rs  oracle.rs
blockchain-core/src/secrets/: cli_integration.rs  config.rs  manager.rs  mod.rs  providers.rs
blockchain-core/src/storage/: mod.rs
blockchain-core/src/wasm/: contract_registry.rs  engine.rs  execution.rs  gas_meter.rs  host_env.rs  mod.rs  types.rs
blockchain-core/tests/: ai_request_payload_test.rs  block_signing_tests.rs  circuit_breaker_test.rs  connectivity_test.rs  health_check_test.rs  oracle_registry_comprehensive_test.rs  secrets_integration_test.rs  signature_verification_integration_test.rs  signed_response_test.rs  simple_contract_integration_test.rs  standalone_signature_verification_test.rs  wasm_integration_test.rs
docs/: faq.md  (+7 more)
dytallix-fast-launch/node/: Cargo.toml  PQC_IMPLEMENTATION.md  README_RPC.md
dytallix-fast-launch/node/examples/: test_fips204.rs
dytallix-fast-launch/node/src/: addr.rs  alerts.rs  execution.rs  gas.rs  lib.rs  main.rs  metrics.rs
dytallix-fast-launch/node/src/crypto/: comprehensive_tests.rs  dilithium.rs  dilithium_fips204.rs  hash.rs  mock.rs  mod.rs  pqc_verify.rs
dytallix-fast-launch/node/src/mempool/: gas_tests.rs  mod.rs  pqc_tests.rs
dytallix-fast-launch/node/src/p2p/: gossip.rs
dytallix-fast-launch/node/src/rpc/: ai.rs  contracts.rs  encryption.rs  errors.rs  mod.rs  oracle.rs  types.rs  wallet_signer.rs
dytallix-fast-launch/node/src/runtime/: dead_man_switch.rs  emission.rs  fee_burn.rs  governance.rs  mod.rs  staking.rs  wasm.rs
dytallix-fast-launch/node/src/runtime/bridge/: mod.rs
dytallix-fast-launch/node/src/runtime/oracle/: mod.rs
dytallix-fast-launch/node/src/secrets/: mod.rs  providers.rs
dytallix-fast-launch/node/src/state/: mod.rs
dytallix-fast-launch/node/src/storage/: blocks.rs  bridge.rs  mod.rs  oracle.rs  receipts.rs  state.rs  tx.rs
dytallix-fast-launch/node/src/types/: mod.rs  tx.rs
dytallix-fast-launch/node/src/util/: hash.rs
dytallix-fast-launch/node/src/ws/: server.rs
dytallix-fast-launch/node/tests/: bridge_integration.rs  bridge_unit.rs  canonical_json_test.rs  cli_integration_test.rs  cli_signature_test.rs  contracts_counter_e2e.rs  dilithium_roundtrip_test.rs  dyt_metrics_comprehensive.rs  emission_integration.rs  emission_schedule_modes_tests.rs  emission_schedule_tests.rs  emission_unit.rs  gas_accounting_unit.rs  gas_api.rs  gas_execution_integration.rs  governance_manual_execute_test.rs  governance_parameter_change_e2e.rs  governance_rpc_integration_test.rs  governance_test.rs  helpers.rs  integration_emission_staking.rs  json_shapes.rs  mempool_integration.rs  mempool_metrics.rs  mempool_perf_determinism.rs  mempool_unit.rs  multi_denom_balance.rs  multi_denom_rpc.rs  oracle.rs  oracle_integration.rs  pqc_signature_integration_test.rs  pqc_tamper_verify.rs  stake_weighted_governance_test.rs  staking_demo_test.rs  staking_reward_accrual_integration.rs  wasm_registry_test.rs
pqc-crypto/: Cargo.toml
pqc-crypto/src/: bridge.rs  lib.rs  performance.rs
smart-contracts/: Cargo.toml
smart-contracts/examples/counter/: Cargo.toml
smart-contracts/examples/counter/src/: lib.rs
smart-contracts/src/: cosmos_bridge.rs  cosmos_bridge_optimized.rs  ethereum_bridge.sol  gas_optimizer.rs  lib.rs  oracle.rs  oracle_simple.rs  runtime.rs  runtime_backup.rs  runtime_clean.rs  runtime_simple.rs  storage_optimizer.rs  types.rs
smart-contracts/src/security/: audit_report.rs  fuzz_tester.rs  gas_attack_analyzer.rs  mod.rs  vulnerability_scanner.rs
smart-contracts/src/tokenomics/: dgt_token.rs  drt_token.rs  emission_controller.rs  mod.rs  types.rs
smart-contracts/test-harness/src/: lib.rs
smart-contracts/tests/: integration_tests.rs  tokenomics_test_stubs.rs
(+10 files in other folders)
