[package]
name = "dytallix-node"
version = "0.1.0"
edition = "2021"
authors = ["Dytallix Team"]
description = "Post-quantum AI-enhanced cryptocurrency node"

[dependencies]
# Our proven PQC implementation
dytallix-pqc = { path = "../pqc-crypto" }

# Smart contracts integration now enabled
dytallix-contracts = { path = "../smart-contracts" }

# Core blockchain dependencies
blake3 = "1.5"
sha3 = "0.10"
sha2 = "0.10"
hex = "0.4"
base64ct = "=1.6.0"  # Pin to compatible version
base64 = "0.22" # Added for API/oracle modules using new Engine trait
ed25519-dalek = { version = "1", features = ["std"] } # Added for oracle signature verification
clap = { version = "4.4", features = ["derive" ] } # Needed for secrets/cli_integration

# Networking and async runtime
tokio = { version = "1.35", features = ["full"] }
libp2p = { version = "0.52", features = ["tokio", "tcp", "noise", "gossipsub", "mdns", "yamux"] }

# Serialization and data structures
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Database and storage
rocksdb = { version = "0.21", default-features = false, features = ["lz4", "snappy"] }

# Logging and error handling
log = "0.4"
env_logger = "0.10"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
thiserror = "1.0"

# Secrets management dependencies
async-trait = "0.1"

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
regex = "1.10"
once_cell = "1.19"
bytes = "1.6"
url = "2.5"

# AI service integration
reqwest = { version = "0.11", features = ["json"] }
warp = "0.3"
tokio-tungstenite = "0.20"
futures-util = "0.3"

# WASM runtime
wasmtime = "19.0"

# PulseGuard API
axum = { version = "0.7", features = ["json","ws"] }
tokio-stream = "0.1"
tower-http = { version = "0.5", features = ["trace"] }

[dev-dependencies]
tokio-test = "0.4"

[features]
default = ["std"]
std = []
runtime-benchmarks = []
api-websocket = [] # New feature to gate websocket/API placeholder types & constructors
staking = [] # Added staking feature flag to silence unexpected_cfg
legacy-consensus = [] # Gates legacy consensus tests & helpers
legacy-wasm = [] # Gate legacy wasm scaffolding if needed
legacy-tests = [] # Broad legacy test suite enable switch

# New lean launch gating features for test consolidation
ai = []                # Gates AI-heavy integration tests & experimental AI modules
oracle = ["ai"]        # Oracle-related verification / signature tests (depends on ai)
advanced-consensus = [] # Gates advanced / experimental consensus optimization tests
metrics = []            # Gates metrics-heavy integration tests (already applied in test files)

# Combined convenience feature
legacy-all = ["legacy-consensus","legacy-wasm","legacy-tests"]

[[example]]
name = "health_check_demo"
path = "examples/health_check_demo.rs"

[[example]]
name = "circuit_breaker_demo"
path = "examples/circuit_breaker_demo.rs"

[[bin]]
name = "dytallix-node"
path = "src/main.rs"

[[bin]]
name = "bridge-server"
path = "src/bin/bridge-server.rs"
