[package]
name = "dytallix-pqc"
version = "0.1.0"
edition = "2021"
authors = ["Dytallix Team"]
description = "Post-quantum cryptography implementation for Dytallix"

[dependencies]
# Post-quantum cryptography
pqcrypto-dilithium = "0.5"
pqcrypto-falcon = "0.3"
pqcrypto-sphincsplus = "0.7"
pqcrypto-kyber = "0.7"
pqcrypto-traits = "0.3"

# Cryptographic utilities
rand = "0.8"
zeroize = { version = "1.8", features = ["derive"] }
sha3 = "0.10"
hex = "0.4"
blake3 = "1.5"
base64 = "0.22"

# Time handling for nonce/timestamp
chrono = { version = "0.4", features = ["serde"] }

# Encryption for key storage
aes-gcm = "0.10"
pbkdf2 = "0.12"
sha2 = "0.10"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
log = "0.4"

[dev-dependencies]
tokio-test = "0.4"
criterion = "0.5"
tempfile = "3.8"

# CLI dependencies
clap = { version = "4.4", features = ["derive"] }
env_logger = "0.10"

[features]
default = ["dilithium", "kyber"]
dilithium = []
kyber = []
falcon = []
sphincs = []
benchmark-stdout = []
pqc-real = []
