[package]
name = "dytallix-contracts"
version = "0.1.0"
edition = "2021"
authors = ["Dytallix Team"]
description = "Smart contract runtime and examples for Dytallix"

[dependencies]
# WASM runtime (standardize on wasmtime)
wasmtime = { version = "19.0", optional = true }
wasmi = { version = "0.31", optional = true }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Substrate dependencies (updated versions)
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2", default-features = false, features = ["derive"], optional = true }

# CosmWasm dependencies for bridge contracts
cosmwasm-std = { version = "1.4", optional = true }
cw-storage-plus = { version = "1.1", optional = true }

# Cryptography
sha3 = "0.10"
blake3 = "1.5"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Logging
log = "0.4"
env_logger = "0.11"

# Utilities
anyhow = "1.0"
thiserror = "1.0"

[dev-dependencies]
tokio-test = "0.4"
rand = "0.8"

[features]
# Include cosmwasm feature by default so bridge contract modules compile during workspace tests
default = ["std", "cosmwasm", "engine_wasmtime", "cosmos-bridge-lite"]
# Provide an optimized bridge variant; user must disable lite to enable optimized
std = [
    "scale/std",
    "scale-info/std",
    "serde/std",
]
engine_wasmtime = ["wasmtime"]
engine_wasmi = ["wasmi"]
cosmwasm = ["cosmwasm-std", "cw-storage-plus"]
cosmos-bridge-lite = []
cosmos-bridge-optimized = []

[lib]
name = "dytallix_contracts"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]
